@@ -343,7 +343,6 @@ protected:
     void setWindowCreated(bool on);
     bool initialized() const;
     void setInitialized(bool on);
-    void generateFontDisplayLists(const QFont & fnt, int listBase);
 
     uint colorIndex(const QColor& c) const;
     void setValid(bool valid);
@@ -430,9 +429,9 @@ public:
     void  setColormap(const QGLColormap & map);
 
     void renderText(int x, int y, const QString & str,
-                     const QFont & fnt = QFont(), int listBase = 2000);
+                    const QFont & fnt = QFont());
     void renderText(double x, double y, double z, const QString & str,
-                     const QFont & fnt = QFont(), int listBase = 2000);
+                    const QFont & fnt = QFont());
     QPaintEngine *paintEngine() const;
 
     GLuint bindTexture(const QImage &image, GLenum target, GLint format,
@@ -474,7 +473,6 @@ protected:
 
     virtual void glInit();
     virtual void glDraw();
-    int fontDisplayListBase(const QFont & fnt, int listBase = 2000);
 
     QGLWidget(QGLWidgetPrivate &dd,
               const QGLFormat &format = QGLFormat(),
