@@ -150,9 +150,6 @@ public:
     bool autoSwap;
 
     QGLColormap cmap;
-#ifndef QT_OPENGL_ES
-    QMap<QString, int> displayListCache;
-#endif
 
     bool disable_clear_on_painter_begin;
 };
